--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-config-next": "^14.2.7",
     "ethers": "^5.7.2",
     "file-saver": "^2.0.5",
+    "json2csv": "^6.0.0-alpha.2",
     "jspdf": "^3.0.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.378.0",
